k8s/order-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: shopsphere
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
        - name: order-service
          image: mohdayazz/shopsphere-order-service:IMAGE_TAG
          imagePullPolicy: Always
          ports:
            - containerPort: 5004
