k8s/product-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
  namespace: shopsphere
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
      labels:
        app: product-service
    spec:
      containers:
        - name: product-service
          image: mohdayazz/shopsphere-product-service:IMAGE_TAG
          imagePullPolicy: Always
          ports:
            - containerPort: 5002
