k8s/user-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: shopsphere
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: mohdayazz/shopsphere-user-service:IMAGE_TAG
          imagePullPolicy: Always
          ports:
            - containerPort: 5001
