k8s/cart-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cart-service
  namespace: shopsphere
spec:
  type: ClusterIP
  selector:
    app: cart-service
  ports:
    - port: 5003
      targetPort: 5003
