k8s/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: shopsphere
spec:
  type: ClusterIP
  selector:
    app: mysql
  ports:
    - port: 3306
      targetPort: 3306
