k8s/order-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: shopsphere
spec:
  type: ClusterIP
  selector:
    app: order-service
  ports:
    - port: 5004
      targetPort: 5004
