k8s/payment-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  namespace: shopsphere
spec:
  type: ClusterIP
  selector:
    app: payment-service
  ports:
    - port: 5005
      targetPort: 5005
