k8s/product-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: shopsphere
spec:
  type: ClusterIP
  selector:
    app: product-service
  ports:
    - port: 5002
      targetPort: 5002
