k8s/user-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: shopsphere
spec:
  type: ClusterIP
  selector:
    app: user-service
  ports:
    - port: 5001
      targetPort: 5001
